# jemo-admin

./: README.md  main.py  pyproject.toml  release.sh
.github/workflows/: release.yml  store.yml
my-jemo-app/: agents.md
my-jemo-app/backend/: db.sqlite3  main.py  models.py  pyproject.toml  tortoise_conf.py
my-jemo-app/backend/migrations/models/: 0_20260422011235_init.py
src/create_jemo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jemo_admin/: main.py
src/jemo_admin/generators/: agentsmd.py  backend.py  vcs.py
