[project]
name = "jemo-admin"
version = "0.2.1"
description = "A CLI tool to scaffold modern web projects with FastAPI, Django, Convex, Next.js, SvelteKit, or TanStack Start."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "typer>=0.23.0",
]

[project.scripts]
jemo-admin = "jemo_admin.main:app"

[project.urls]
Homepage = "https://github.com/jemo/jemo-admin"
Repository = "https://github.com/jemo/jemo-admin"
Issues = "https://github.com/jemo/jemo-admin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jemo_admin"]
